--- a/docs/visual-basic/misc/bc30946.md
+++ b/docs/visual-basic/misc/bc30946.md
@@ -8,27 +8,27 @@ helpviewer_keywords:
 - BC30946
 ms.assetid: 560ab468-d8cf-4e9c-ae13-57a55e83d2b1
 ms.openlocfilehash: aef75782ff940955106894907d52c42f1378c58e
-ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
+ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/03/2018
-ms.locfileid: "43482829"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43528032"
 ---
-# <a name="stop-request-is-pending"></a><span data-ttu-id="a2b02-102">중지 요청이 대기 중입니다.</span><span class="sxs-lookup"><span data-stu-id="a2b02-102">Stop request is pending</span></span>
-<span data-ttu-id="a2b02-103">Visual Studio 디버거에서 식이 프로시저 호출을 지정했지만 스레드 중지 요청이 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a2b02-103">In the Visual Studio debugger, an expression specifies a procedure call, but there is a request to stop the thread.</span></span>  
+# <a name="stop-request-is-pending"></a><span data-ttu-id="3b6c0-102">중지 요청이 대기 중입니다.</span><span class="sxs-lookup"><span data-stu-id="3b6c0-102">Stop request is pending</span></span>
+<span data-ttu-id="3b6c0-103">Visual Studio 디버거에서 식이 프로시저 호출을 지정했지만 스레드 중지 요청이 있습니다.</span><span class="sxs-lookup"><span data-stu-id="3b6c0-103">In the Visual Studio debugger, an expression specifies a procedure call, but there is a request to stop the thread.</span></span>  
   
- <span data-ttu-id="a2b02-104">디버거는 활성화되지 않은 스레드에서 프로시저를 호출하려고 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="a2b02-104">The debugger does not attempt to call a procedure on a thread that is not active.</span></span>  
+ <span data-ttu-id="3b6c0-104">디버거는 활성화되지 않은 스레드에서 프로시저를 호출하려고 하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="3b6c0-104">The debugger does not attempt to call a procedure on a thread that is not active.</span></span>  
   
- <span data-ttu-id="a2b02-105">**오류 ID:** BC30946</span><span class="sxs-lookup"><span data-stu-id="a2b02-105">**Error ID:** BC30946</span></span>  
+ <span data-ttu-id="3b6c0-105">**오류 ID:** BC30946</span><span class="sxs-lookup"><span data-stu-id="3b6c0-105">**Error ID:** BC30946</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a2b02-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a2b02-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3b6c0-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3b6c0-106">To correct this error</span></span>  
   
--   <span data-ttu-id="a2b02-107">가능하면 스레드 중지 요청을 한 원본을 찾아 다시 발생하지 않도록 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="a2b02-107">If possible, determine the source of the request to stop the thread, so that you can prevent it from happening again.</span></span>  
+-   <span data-ttu-id="3b6c0-107">가능하면 스레드 중지 요청을 한 원본을 찾아 다시 발생하지 않도록 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="3b6c0-107">If possible, determine the source of the request to stop the thread, so that you can prevent it from happening again.</span></span>  
   
--   <span data-ttu-id="a2b02-108">종료 후 디버깅을 다시 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="a2b02-108">Terminate and restart debugging.</span></span>  
+-   <span data-ttu-id="3b6c0-108">종료 후 디버깅을 다시 시작합니다.</span><span class="sxs-lookup"><span data-stu-id="3b6c0-108">Terminate and restart debugging.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a2b02-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a2b02-109">See Also</span></span>  
- [<span data-ttu-id="a2b02-110">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="a2b02-110">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)  
- [<span data-ttu-id="a2b02-111">방법: 실행 시작</span><span class="sxs-lookup"><span data-stu-id="a2b02-111">How to: Start Execution</span></span>](https://msdn.microsoft.com/library/b0fe0ce5-900e-421f-a4c6-aa44ddae453c)  
- [<span data-ttu-id="a2b02-112">방법: 디버깅을 중지 또는 실행 중지</span><span class="sxs-lookup"><span data-stu-id="a2b02-112">How to: Stop Debugging or Stop Execution</span></span>](https://msdn.microsoft.com/library/03c68f95-aa96-481b-990e-467e065453a5)  
- [<span data-ttu-id="a2b02-113">코드 단계별 실행 개요</span><span class="sxs-lookup"><span data-stu-id="a2b02-113">Code Stepping Overview</span></span>](https://msdn.microsoft.com/library/8791dac9-64d1-4bb9-b59e-8d59af1833f9)
+## <a name="see-also"></a><span data-ttu-id="3b6c0-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="3b6c0-109">See Also</span></span>  
+ [<span data-ttu-id="3b6c0-110">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="3b6c0-110">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)  
+ [<span data-ttu-id="3b6c0-111">방법: 실행 시작</span><span class="sxs-lookup"><span data-stu-id="3b6c0-111">How to: Start Execution</span></span>](https://msdn.microsoft.com/library/b0fe0ce5-900e-421f-a4c6-aa44ddae453c)  
+ [<span data-ttu-id="3b6c0-112">방법: 디버깅을 중지 또는 실행 중지</span><span class="sxs-lookup"><span data-stu-id="3b6c0-112">How to: Stop Debugging or Stop Execution</span></span>](https://msdn.microsoft.com/library/03c68f95-aa96-481b-990e-467e065453a5)  
+ [<span data-ttu-id="3b6c0-113">코드 단계별 실행 개요</span><span class="sxs-lookup"><span data-stu-id="3b6c0-113">Code Stepping Overview</span></span>](https://msdn.microsoft.com/library/8791dac9-64d1-4bb9-b59e-8d59af1833f9)
