--- a/docs/visual-basic/misc/bc32119.md
+++ b/docs/visual-basic/misc/bc32119.md
@@ -8,30 +8,30 @@ helpviewer_keywords:
 - BC32119
 ms.assetid: 30e6778d-5c2b-4f2d-a136-4e66fa9fbe4d
 ms.openlocfilehash: 0b7f43f615cc5cdb4dcd57c563c8013dd6c7d2bd
-ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
+ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/01/2018
-ms.locfileid: "43407086"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43526277"
 ---
-# <a name="constraint-39ltconstraint1gt39-conflicts-with-the-constraint-39ltconstraint2gt39-already-specified-for-type-parameter-39lttypeparameternamegt39"></a><span data-ttu-id="efc60-102">제약 조건 &#39; &lt;constraint1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt; &#39; 형식 매개 변수에 대해 이미 지정 되어 &#39; &lt; typeparametername&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="efc60-102">Constraint &#39;&lt;constraint1&gt;&#39; conflicts with the constraint &#39;&lt;constraint2&gt;&#39; already specified for type parameter &#39;&lt;typeparametername&gt;&#39;</span></span>
-<span data-ttu-id="efc60-103">제네릭 형식이 형식 매개 변수에서 충돌하는 제약 조건으로 선언됩니다.</span><span class="sxs-lookup"><span data-stu-id="efc60-103">A generic type is declared with conflicting constraints on a type parameter.</span></span>  
+# <a name="constraint-39ltconstraint1gt39-conflicts-with-the-constraint-39ltconstraint2gt39-already-specified-for-type-parameter-39lttypeparameternamegt39"></a><span data-ttu-id="b8ee9-102">제약 조건 &#39; &lt;constraint1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt; &#39; 형식 매개 변수에 대해 이미 지정 되어 &#39; &lt; typeparametername&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="b8ee9-102">Constraint &#39;&lt;constraint1&gt;&#39; conflicts with the constraint &#39;&lt;constraint2&gt;&#39; already specified for type parameter &#39;&lt;typeparametername&gt;&#39;</span></span>
+<span data-ttu-id="b8ee9-103">제네릭 형식이 형식 매개 변수에서 충돌하는 제약 조건으로 선언됩니다.</span><span class="sxs-lookup"><span data-stu-id="b8ee9-103">A generic type is declared with conflicting constraints on a type parameter.</span></span>  
   
- <span data-ttu-id="efc60-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="efc60-104">The following statement can generate this error.</span></span>  
+ <span data-ttu-id="b8ee9-104">다음 문은 이 오류를 생성할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="b8ee9-104">The following statement can generate this error.</span></span>  
   
  `Public Class testClass(Of t As {Structure, Class })`  
   
- <span data-ttu-id="efc60-105">제약 조건 `Structure` 및 `Class` 로 인해 형식 매개 변수 `t`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="efc60-105">The constraints `Structure` and `Class` cause a conflict for type parameter `t`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
+ <span data-ttu-id="b8ee9-105">제약 조건 `Structure` 및 `Class` 로 인해 형식 매개 변수 `t`에 대한 충돌이 발생합니다. 그 이유는 해당 형식 인수가 `Structure` 제약 조건에서는 값 형식이어야 하고 `Class` 에서는 참조 형식이어야 하기 때문입니다.</span><span class="sxs-lookup"><span data-stu-id="b8ee9-105">The constraints `Structure` and `Class` cause a conflict for type parameter `t`, because the `Structure` constraint requires that the corresponding type argument be a value type, while `Class` requires that it be a reference type.</span></span>  
   
- <span data-ttu-id="efc60-106">**오류 ID:** BC32119</span><span class="sxs-lookup"><span data-stu-id="efc60-106">**Error ID:** BC32119</span></span>  
+ <span data-ttu-id="b8ee9-106">**오류 ID:** BC32119</span><span class="sxs-lookup"><span data-stu-id="b8ee9-106">**Error ID:** BC32119</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="efc60-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="efc60-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="b8ee9-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="b8ee9-107">To correct this error</span></span>  
   
--   <span data-ttu-id="efc60-108">충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="efc60-108">Change the type parameter constraints to avoid conflicts.</span></span>  
+-   <span data-ttu-id="b8ee9-108">충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.</span><span class="sxs-lookup"><span data-stu-id="b8ee9-108">Change the type parameter constraints to avoid conflicts.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="efc60-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="efc60-109">See Also</span></span>  
- [<span data-ttu-id="efc60-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="efc60-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [<span data-ttu-id="efc60-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="efc60-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
- [<span data-ttu-id="efc60-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="efc60-112">Structure (Visual Basic)</span></span>](https://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)  
- [<span data-ttu-id="efc60-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="efc60-113">Class (Visual Basic)</span></span>](https://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)  
- [<span data-ttu-id="efc60-114">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="efc60-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+## <a name="see-also"></a><span data-ttu-id="b8ee9-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="b8ee9-109">See Also</span></span>  
+ [<span data-ttu-id="b8ee9-110">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="b8ee9-110">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+ [<span data-ttu-id="b8ee9-111">형식 목록</span><span class="sxs-lookup"><span data-stu-id="b8ee9-111">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
+ [<span data-ttu-id="b8ee9-112">구조체 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="b8ee9-112">Structure (Visual Basic)</span></span>](https://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)  
+ [<span data-ttu-id="b8ee9-113">클래스 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="b8ee9-113">Class (Visual Basic)</span></span>](https://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)  
+ [<span data-ttu-id="b8ee9-114">값 형식과 참조 형식</span><span class="sxs-lookup"><span data-stu-id="b8ee9-114">Value Types and Reference Types</span></span>](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
