--- a/docs/visual-basic/misc/bc40011.md
+++ b/docs/visual-basic/misc/bc40011.md
@@ -8,25 +8,25 @@ helpviewer_keywords:
 - BC40011
 ms.assetid: 39aed273-bf27-4667-8116-022c4dd8f3c5
 ms.openlocfilehash: 40e495c738d9f3014cb83fbbbe6eba14711eca69
-ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
+ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/01/2018
-ms.locfileid: "43408609"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43527766"
 ---
-# <a name="39microsoftvisualbasiccomclassattribute39-is-specified-for-class-39ltclassnamegt39-but-it-has-no-public-members-that-can-be-exposed-to-com-therefore-no-com-interfaces-are-generated"></a><span data-ttu-id="04073-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 클래스에 대 한 지정 된 &#39; &lt;classname&gt; &#39; COM에 노출 될 수 있는 public 멤버가 있기 있지만 없으므로 COM 인터페이스가 생성 됩니다</span><span class="sxs-lookup"><span data-stu-id="04073-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; is specified for class &#39;&lt;classname&gt;&#39; but it has no public members that can be exposed to COM; therefore no COM interfaces are generated</span></span>
-<span data-ttu-id="04073-103">`COMClassAttribute` 특성 블록을 사용하는 클래스는 `Public` 속성 또는 메서드를 정의하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="04073-103">A class using a `COMClassAttribute` attribute block does not define any `Public` properties or methods.</span></span> <span data-ttu-id="04073-104">클래스를 COM 개체로 노출해야 하는 경우 해당 속성과 메서드를 `Public` 액세스 권한으로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="04073-104">If a class is to be exposed as a COM object, its properties and methods must be declared with `Public` access.</span></span>  
+# <a name="39microsoftvisualbasiccomclassattribute39-is-specified-for-class-39ltclassnamegt39-but-it-has-no-public-members-that-can-be-exposed-to-com-therefore-no-com-interfaces-are-generated"></a><span data-ttu-id="3f6bc-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 클래스에 대 한 지정 된 &#39; &lt;classname&gt; &#39; COM에 노출 될 수 있는 public 멤버가 있기 있지만 없으므로 COM 인터페이스가 생성 됩니다</span><span class="sxs-lookup"><span data-stu-id="3f6bc-102">&#39;Microsoft.VisualBasic.ComClassAttribute&#39; is specified for class &#39;&lt;classname&gt;&#39; but it has no public members that can be exposed to COM; therefore no COM interfaces are generated</span></span>
+<span data-ttu-id="3f6bc-103">`COMClassAttribute` 특성 블록을 사용하는 클래스는 `Public` 속성 또는 메서드를 정의하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="3f6bc-103">A class using a `COMClassAttribute` attribute block does not define any `Public` properties or methods.</span></span> <span data-ttu-id="3f6bc-104">클래스를 COM 개체로 노출해야 하는 경우 해당 속성과 메서드를 `Public` 액세스 권한으로 선언해야 합니다.</span><span class="sxs-lookup"><span data-stu-id="3f6bc-104">If a class is to be exposed as a COM object, its properties and methods must be declared with `Public` access.</span></span>  
   
- <span data-ttu-id="04073-105">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="04073-105">The message is a warning by default.</span></span> <span data-ttu-id="04073-106">경고를 숨기 거 나 오류로 처리 경고 하는 방법에 대 한 자세한 내용은 참조 하세요. [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)합니다.</span><span class="sxs-lookup"><span data-stu-id="04073-106">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="3f6bc-105">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="3f6bc-105">The message is a warning by default.</span></span> <span data-ttu-id="3f6bc-106">경고를 숨기 거 나 오류로 처리 경고 하는 방법에 대 한 자세한 내용은 참조 하세요. [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)합니다.</span><span class="sxs-lookup"><span data-stu-id="3f6bc-106">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="04073-107">**오류 ID:** BC40011</span><span class="sxs-lookup"><span data-stu-id="04073-107">**Error ID:** BC40011</span></span>  
+ <span data-ttu-id="3f6bc-107">**오류 ID:** BC40011</span><span class="sxs-lookup"><span data-stu-id="3f6bc-107">**Error ID:** BC40011</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="04073-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="04073-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3f6bc-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3f6bc-108">To correct this error</span></span>  
   
--   <span data-ttu-id="04073-109">클래스의 하나 이상 속성 또는 메서드에 `Public` 키워드를 추가하거나 `COMClassAttribute` 특성 블록을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="04073-109">Add the `Public` keyword to one or more properties or methods in the class, or remove the `COMClassAttribute` attribute block.</span></span>  
+-   <span data-ttu-id="3f6bc-109">클래스의 하나 이상 속성 또는 메서드에 `Public` 키워드를 추가하거나 `COMClassAttribute` 특성 블록을 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="3f6bc-109">Add the `Public` keyword to one or more properties or methods in the class, or remove the `COMClassAttribute` attribute block.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="04073-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="04073-110">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="3f6bc-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="3f6bc-110">See Also</span></span>  
    
    
- [<span data-ttu-id="04073-111">공용</span><span class="sxs-lookup"><span data-stu-id="04073-111">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)  
- [<span data-ttu-id="04073-112">ComClassAttribute 클래스</span><span class="sxs-lookup"><span data-stu-id="04073-112">ComClassAttribute Class</span></span>](https://msdn.microsoft.com/library/5c2f0835-9210-47dc-bc59-5c1769953574)
+ [<span data-ttu-id="3f6bc-111">공용</span><span class="sxs-lookup"><span data-stu-id="3f6bc-111">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)  
+ [<span data-ttu-id="3f6bc-112">ComClassAttribute 클래스</span><span class="sxs-lookup"><span data-stu-id="3f6bc-112">ComClassAttribute Class</span></span>](https://msdn.microsoft.com/library/5c2f0835-9210-47dc-bc59-5c1769953574)
