--- a/docs/visual-basic/misc/bc42317.md
+++ b/docs/visual-basic/misc/bc42317.md
@@ -8,23 +8,23 @@ helpviewer_keywords:
 - BC42317
 ms.assetid: 53b5425d-2f73-4488-b90b-adb1835307c9
 ms.openlocfilehash: b848ff04d567c66a56f9630932fe0097ee20067a
-ms.sourcegitcommit: efff8f331fd9467f093f8ab8d23a203d6ecb5b60
+ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/01/2018
-ms.locfileid: "43390649"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43527399"
 ---
-# <a name="xml-comment-type-parameter-ltparametergt-does-not-match-a-type-parameter-on-the-corresponding-ltkeywordgt-statement"></a><span data-ttu-id="af5ad-102">XML 주석 형식 매개 변수에 &lt;매개 변수&gt; 해당 형식 매개 변수와 일치 하지 않습니다 &lt;키워드&gt; 문</span><span class="sxs-lookup"><span data-stu-id="af5ad-102">XML comment type parameter &lt;parameter&gt; does not match a type parameter on the corresponding &lt;keyword&gt; statement</span></span>
-<span data-ttu-id="af5ad-103">XML 주석 매개 변수에 \<매개 변수 > 해당 형식 매개 변수와 일치 하지 않습니다 \<키워드 > 문입니다.</span><span class="sxs-lookup"><span data-stu-id="af5ad-103">XML comment parameter \<parameter> does not match a type parameter on the corresponding \<keyword> statement.</span></span> <span data-ttu-id="af5ad-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="af5ad-104">XML comment will be ignored.</span></span>  
+# <a name="xml-comment-type-parameter-ltparametergt-does-not-match-a-type-parameter-on-the-corresponding-ltkeywordgt-statement"></a><span data-ttu-id="4e0bb-102">XML 주석 형식 매개 변수에 &lt;매개 변수&gt; 해당 형식 매개 변수와 일치 하지 않습니다 &lt;키워드&gt; 문</span><span class="sxs-lookup"><span data-stu-id="4e0bb-102">XML comment type parameter &lt;parameter&gt; does not match a type parameter on the corresponding &lt;keyword&gt; statement</span></span>
+<span data-ttu-id="4e0bb-103">XML 주석 매개 변수에 \<매개 변수 > 해당 형식 매개 변수와 일치 하지 않습니다 \<키워드 > 문입니다.</span><span class="sxs-lookup"><span data-stu-id="4e0bb-103">XML comment parameter \<parameter> does not match a type parameter on the corresponding \<keyword> statement.</span></span> <span data-ttu-id="4e0bb-104">XML 주석이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="4e0bb-104">XML comment will be ignored.</span></span>  
   
- <span data-ttu-id="af5ad-105">XML 주석 태그가 메서드의 일부 매개 변수(모든 매개 변수 아님)에 대해 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="af5ad-105">An XML comment tag was specified for some, but not all, type parameters in a method.</span></span>  
+ <span data-ttu-id="4e0bb-105">XML 주석 태그가 메서드의 일부 매개 변수(모든 매개 변수 아님)에 대해 지정되었습니다.</span><span class="sxs-lookup"><span data-stu-id="4e0bb-105">An XML comment tag was specified for some, but not all, type parameters in a method.</span></span>  
   
- <span data-ttu-id="af5ad-106">**오류 ID:** BC42317</span><span class="sxs-lookup"><span data-stu-id="af5ad-106">**Error ID:** BC42317</span></span>  
+ <span data-ttu-id="4e0bb-106">**오류 ID:** BC42317</span><span class="sxs-lookup"><span data-stu-id="4e0bb-106">**Error ID:** BC42317</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="af5ad-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="af5ad-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4e0bb-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="4e0bb-107">To correct this error</span></span>  
   
--   <span data-ttu-id="af5ad-108">메서드의 모든 형식 매개 변수에 대해 XML 주석 태그를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="af5ad-108">Provide XML comment tags for all type parameters in the method.</span></span>  
+-   <span data-ttu-id="4e0bb-108">메서드의 모든 형식 매개 변수에 대해 XML 주석 태그를 제공합니다.</span><span class="sxs-lookup"><span data-stu-id="4e0bb-108">Provide XML comment tags for all type parameters in the method.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="af5ad-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="af5ad-109">See Also</span></span>  
- [<span data-ttu-id="af5ad-110">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="af5ad-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)  
- [<span data-ttu-id="af5ad-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="af5ad-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+## <a name="see-also"></a><span data-ttu-id="4e0bb-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="4e0bb-109">See Also</span></span>  
+ [<span data-ttu-id="4e0bb-110">XML 주석 태그</span><span class="sxs-lookup"><span data-stu-id="4e0bb-110">XML Comment Tags</span></span>](../../visual-basic/language-reference/xmldoc/index.md)  
+ [<span data-ttu-id="4e0bb-111">코드를 XML로 문서화</span><span class="sxs-lookup"><span data-stu-id="4e0bb-111">Documenting Your Code with XML</span></span>](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
