--- a/docs/visual-basic/misc/bc40011.md
+++ b/docs/visual-basic/misc/bc40011.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC40011
 ms.assetid: 39aed273-bf27-4667-8116-022c4dd8f3c5
-ms.openlocfilehash: 40e495c738d9f3014cb83fbbbe6eba14711eca69
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
+ms.openlocfilehash: 47321cdcae5c9f41a9386a9f2c1d7c2422b6b871
+ms.sourcegitcommit: 64f4baed249341e5bf64d1385bf48e3f2e1a0211
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43527766"
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44097501"
 ---
 # <a name="39microsoftvisualbasiccomclassattribute39-is-specified-for-class-39ltclassnamegt39-but-it-has-no-public-members-that-can-be-exposed-to-com-therefore-no-com-interfaces-are-generated"></a>&#39;Microsoft.VisualBasic.ComClassAttribute&#39; 클래스에 대 한 지정 된 &#39; &lt;classname&gt; &#39; COM에 노출 될 수 있는 public 멤버가 있기 있지만 없으므로 COM 인터페이스가 생성 됩니다
 `COMClassAttribute` 특성 블록을 사용하는 클래스는 `Public` 속성 또는 메서드를 정의하지 않습니다. 클래스를 COM 개체로 노출해야 하는 경우 해당 속성과 메서드를 `Public` 액세스 권한으로 선언해야 합니다.  
@@ -25,8 +25,7 @@ ms.locfileid: "43527766"
   
 -   클래스의 하나 이상 속성 또는 메서드에 `Public` 키워드를 추가하거나 `COMClassAttribute` 특성 블록을 제거합니다.  
   
-## <a name="see-also"></a>참고 항목  
-   
-   
- [공용](../../visual-basic/language-reference/modifiers/public.md)  
- [ComClassAttribute 클래스](https://msdn.microsoft.com/library/5c2f0835-9210-47dc-bc59-5c1769953574)
+## <a name="see-also"></a>참고자료
+
+- [공용](../../visual-basic/language-reference/modifiers/public.md)  
+- [ComClassAttribute 클래스](xref:Microsoft.VisualBasic.ComClassAttribute)
