--- a/docs/visual-basic/misc/bc32111.md
+++ b/docs/visual-basic/misc/bc32111.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32111
 ms.assetid: b03b5840-5318-4844-b2da-1bca4c28d097
-ms.openlocfilehash: 3f4459b49c5c8242ac600b86d23567e27dd4fbbf
-ms.sourcegitcommit: a885cc8c3e444ca6471348893d5373c6e9e49a47
-ms.translationtype: HT
+ms.openlocfilehash: 8ee2e32e92a01b22565b69441646f6a2b65d9b46
+ms.sourcegitcommit: 64f4baed249341e5bf64d1385bf48e3f2e1a0211
+ms.translationtype: MT
 ms.contentlocale: ko-KR
 ms.lasthandoff: 09/07/2018
-ms.locfileid: "44063500"
+ms.locfileid: "44139230"
 ---
 # <a name="indirect-constraint-39ltconstraint1gt39-obtained-from-the-type-parameter-constraint-39lttypeparameter1gt39-conflicts-with-the-constraint-39ltconstraint2gt39"></a>간접 제약 조건 &#39; &lt;constraint1&gt; &#39; 형식 매개 변수 제약 조건에서 가져온 &#39; &lt;typeparameter1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt;&#39;
 제네릭 형식이 직접 및 간접 제약 조건의 조합으로 인해 충돌하는 제약 조건으로 선언되었습니다.  
@@ -29,9 +29,10 @@ ms.locfileid: "44063500"
   
 -   제약 조건의 충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)  
- [구조체 (Visual Basic)](https://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)  
- [클래스 (Visual Basic)](https://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)  
- [값 형식과 참조 형식](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+## <a name="see-also"></a>참고자료
+
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)  
+- [구조체 (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)  
+- [클래스 (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md)  
+- [값 형식과 참조 형식](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
