--- a/docs/visual-basic/misc/bc32119.md
+++ b/docs/visual-basic/misc/bc32119.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32119
 ms.assetid: 30e6778d-5c2b-4f2d-a136-4e66fa9fbe4d
-ms.openlocfilehash: 0b7f43f615cc5cdb4dcd57c563c8013dd6c7d2bd
-ms.sourcegitcommit: 2eceb05f1a5bb261291a1f6a91c5153727ac1c19
-ms.translationtype: MT
+ms.openlocfilehash: 9ade27427fb970bc596a02a47442c3c2c79f4c87
+ms.sourcegitcommit: 64f4baed249341e5bf64d1385bf48e3f2e1a0211
+ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/04/2018
-ms.locfileid: "43526277"
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44079014"
 ---
 # <a name="constraint-39ltconstraint1gt39-conflicts-with-the-constraint-39ltconstraint2gt39-already-specified-for-type-parameter-39lttypeparameternamegt39"></a>제약 조건 &#39; &lt;constraint1&gt; &#39; 제약 조건과 충돌 합니다 &#39; &lt;constraint2&gt; &#39; 형식 매개 변수에 대해 이미 지정 되어 &#39; &lt; typeparametername&gt;&#39;
 제네릭 형식이 형식 매개 변수에서 충돌하는 제약 조건으로 선언됩니다.  
@@ -29,9 +29,10 @@ ms.locfileid: "43526277"
   
 -   충돌을 방지하려면 형식 매개 변수 제약 조건을 변경합니다.  
   
-## <a name="see-also"></a>참고 항목  
- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)  
- [구조체 (Visual Basic)](https://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)  
- [클래스 (Visual Basic)](https://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)  
- [값 형식과 참조 형식](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+## <a name="see-also"></a>참고자료
+
+- [Visual Basic의 제네릭 형식](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)  
+- [형식 목록](../../visual-basic/language-reference/statements/type-list.md)  
+- [구조체 (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md)  
+- [클래스 (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md)  
+- [값 형식과 참조 형식](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
