--- a/docs/visual-basic/misc/bc42001.md
+++ b/docs/visual-basic/misc/bc42001.md
@@ -8,11 +8,11 @@ helpviewer_keywords:
 - BC42001
 ms.assetid: 31e7c383-894e-416c-b834-3688cc340ccf
 ms.openlocfilehash: 5f62c99faafa06ce0fbd41affa22d4c241751b91
-ms.sourcegitcommit: 3c1c3ba79895335ff3737934e39372555ca7d6d0
-ms.translationtype: MT
+ms.sourcegitcommit: 64f4baed249341e5bf64d1385bf48e3f2e1a0211
+ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/05/2018
-ms.locfileid: "43799790"
+ms.lasthandoff: 09/07/2018
+ms.locfileid: "44078769"
 ---
 # <a name="39classinitialize39-event-is-no-longer-supported"></a>&#39;Class_Initialize&#39; 이벤트는 더 이상 지원
 'Class_Initialize' 이벤트는 더 이상 지원되지 않습니다. 클래스를 초기화하려면 'Sub New'를 사용합니다.  
